--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -15,16 +15,33 @@ color: #000;
     font-size: 1em;
 }
 
+a {
+  color:#333;
+  text-decoration:none;
+}
+
 
 .container {
     margin: 0 auto;
 width: 90%;
+max-width:70em;
 display: grid;
 grid-column-gap: 2rem;
 margin: 0 auto;
 grid-column-gap: 2rem;
 grid-template-columns: 1fr;
+
+&.home {
+grid-template-columns: 1fr 1fr;
+
+h2 {
+grid-column: 1/3;
 }
+  
+}
+}
+
+
 
 .navbar .container {
 grid-template-columns: 2fr 1fr;
