--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -20,19 +20,27 @@ a {
   text-decoration:none;
 }
 
+ul, li {
+  padding:0;
+}
 
 .container {
     margin: 0 auto;
 width: 90%;
 max-width:70em;
 display: grid;
-grid-column-gap: 2rem;
 margin: 0 auto;
 grid-column-gap: 2rem;
+grid-row-gap: 2rem;
 grid-template-columns: 1fr;
 
 &.home {
 grid-template-columns: 1fr 1fr;
+
+@media screen and (max-width: 900px) {
+grid-template-columns: 1fr ;
+   
+}
 
 h2 {
 grid-column: 1/3;
@@ -67,8 +75,6 @@ img {
 .content .taglist {
    list-style: none;
   margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 1.5rem;
   margin-top: 1.5rem;
 
 
@@ -80,5 +86,25 @@ img {
   }
 
 }
+
+.tags {
+display:grid;
+grid-template-columns: 20px 1fr;
+ul {
+  list-style:none;
+
+  display:inline-flex;
+  margin-left:2em;
+}
+}
  
-  
+.project-links {
+  display:inline-block;
+
+  li {
+  display:inline-block;
+  padding:4px 14px;
+  border: 1px solid;
+  margin-right:1em;
+  }
+}  
