update to about page

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -106,5 +106,14 @@ ul {
   padding:4px 14px;
   border: 1px solid;
   margin-right:1em;
+  img {
+  max-width:25px;
+  }
   }
 }  
+
+.about-content {
+  li {
+  margin-left: 15px;
+  }
+}
