--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -117,3 +117,12 @@ ul {
   margin-left: 15px;
   }
 }
+
+.about-section {
+  display:grid;
+  grid-template-columns:1fr 2fr;
+  img {
+  max-width: 170px;
+border-radius: 50%;
+  }
+}
