--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700');
 
+html {
+  overflow-x:hidden;
+}
+
 body {
   font-family: 'Quattrocento Sans', sans-serif;
 
@@ -125,4 +129,32 @@ ul {
   max-width: 170px;
 border-radius: 50%;
   }
+}
+
+.blog-content {
+      background: #fff;
+    border-radius: 4px;
+    box-shadow: 0 3px 10px rgba(25, 17, 34, 0.05);
+    padding: 2.1rem;
+    padding-left: 3.15rem;
+    padding-right: 3.15rem;
+    
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    -moz-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+transform:translateY(-4px);box-shadow:0 10px 42px rgba(25, 17, 34, 0.1);-webkit-transform:translateY(-4px);
+    }
+}
+
+.post-content--title {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 2rem;
+grid-row-gap: 2rem;
+
+.post-content--external-link { 
+margin-top: 19px;
+}
 }
