update the navbar

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -132,7 +132,7 @@ border-radius: 50%;
 }
 
 
-.blog-content, .content-post {
+.blog-content {
       background: #fff;
     border-radius: 4px;
     box-shadow: 0 3px 10px rgba(25, 17, 34, 0.05);
