--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -38,7 +38,20 @@ grid-column-gap: 2rem;
 grid-row-gap: 2rem;
 grid-template-columns: 1fr;
 
-&.home {
+&.page {
+  h2 {
+      max-width: 700px;
+    grid-column: 1/-1;
+    font-size: 1.6em;
+    font-weight: 300;
+    @media screen and (max-width: 900px) {
+max-width:100%;
+   
+}
+}
+}
+
+&.two {
 grid-template-columns: 1fr 1fr;
 
 @media screen and (max-width: 900px) {
@@ -47,8 +60,18 @@ grid-template-columns: 1fr ;
 }
 
 h2 {
-grid-column: 1/-1;
+      max-width: 700px;
+    grid-column: 1/-1;
+    font-size: 1.6em;
+    font-weight: 300;
+    @media screen and (max-width: 900px) {
+max-width:100%;
+   
 }
+
+}
+
+
   
 }
 }
@@ -79,14 +102,17 @@ img {
 .content .taglist {
    list-style: none;
   margin-bottom: 0;
-  margin-top: 1.5rem;
-
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
   li {
+margin: 1em 0;
 
-      padding: 0 2rem 1rem 0;
-    margin-bottom: 1.5rem;
-    margin-top: 0;
+a {
+  border: 1px solid #eee;
+padding: 8px 15px;
+}
+
   }
 
 }
@@ -182,7 +208,7 @@ p {
 
 .blog-container {
   max-width:700px;
-  margin: 0 auto;
+  margin: 0 ;
   padding: 0 2em;
 
 }
