added react fade in to blog projects and about

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -146,6 +146,13 @@ ul {
   }
 }  
 
+.project-content {
+  
+  h2 {
+  margin:0;
+  }
+}
+
 .project-content--items {
   display:grid;
   grid-template-columns: 1fr 1fr;
