--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -156,6 +156,10 @@ ul {
 .project-content--items {
   display:grid;
   grid-template-columns: 1fr 1fr;
+  @media screen and (max-width: 800px) {
+grid-template-columns:1fr ;
+grid-row-gap:2em;
+}
 }
 
 .about-content {
@@ -167,7 +171,7 @@ ul {
 .about-section {
   display:grid;
   grid-template-columns:1fr 2fr;
-   @media screen and (max-width: 700px) {
+   @media screen and (max-width: 600px) {
 grid-template-columns:1fr ;
 }
 
@@ -186,13 +190,16 @@ max-width:100%;
       background: #fff;
     border-radius: 4px;
     box-shadow: 0 3px 10px rgba(25, 17, 34, 0.05);
-    padding: 2.1rem;
     padding-left: 3.15rem;
     padding-right: 3.15rem;
     
     transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
     -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
     -moz-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     @media screen and (max-width: 700px) {
+ padding: 0 1em;
+}
+
 
     &:hover {
 transform:translateY(-4px);box-shadow:0 10px 42px rgba(25, 17, 34, 0.1);-webkit-transform:translateY(-4px);
