--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -210,7 +210,7 @@ max-width:100%;
     -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
     -moz-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
      @media screen and (max-width: 700px) {
- padding: 0 1em;
+ padding: 0 5px;
 }
 
 
@@ -273,9 +273,10 @@ p {
   display: grid;
 grid-template-columns: 1fr 2fr;
 grid-column-gap: 2em;
+padding:2em;
  @media screen and (max-width: 900px) {
 grid-template-columns: 1fr ;
-
+padding: 0 5px;
    
 }
 .content-post--project--title--links {
