--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -202,6 +202,7 @@ max-width:100%;
 .blog-content {
       background: #fff;
     border-radius: 4px;
+    border: 1px solid rgb(234, 236, 238);
     box-shadow: 0 3px 10px rgba(25, 17, 34, 0.05);
     padding-left: 3.15rem;
     padding-right: 3.15rem;
@@ -211,6 +212,9 @@ max-width:100%;
     -moz-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
      @media screen and (max-width: 700px) {
  padding: 0 5px;
+    border: none;
+    box-shadow: none;
+
 }
 
 
@@ -269,15 +273,19 @@ p {
   }
 
 
+
 .content-post--project {
   display: grid;
 grid-template-columns: 1fr 2fr;
 grid-column-gap: 2em;
 padding:2em;
+border: 1px solid #eaecee;
+
  @media screen and (max-width: 900px) {
 grid-template-columns: 1fr ;
 padding: 0 5px;
-   
+border: none;
+
 }
 .content-post--project--title--links {
   
