--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -119,7 +119,8 @@ img {
    list-style: none;
   margin-bottom: 0;
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: auto auto auto auto;
+
 
   li {
 margin: 1em 0;
