--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -35,6 +35,13 @@ ul{
 
 .section-home {
   margin-top:4em;
+
+     @media screen and (max-width: 900px) {
+  margin-top:2em;
+
+   
+}
+
 }
 
 .container {
