--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -355,6 +355,13 @@ font-size:2em;
 font-weight:300;
   margin:0;
   line-height:1.2;
+
+   @media screen and (max-width: 700px) {
+font-size:1.5em;
+  line-height:1.4;
+
+   
+}
 }
 
 p {
