--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -5,11 +5,11 @@ html {
 }
 
 body {
-  font-family: 'Quattrocento Sans', sans-serif;
-  margin:0;
-  padding:0;
-  font-weight:400;
-color: #000;
+    font-family: aktiv-grotesk-extended, sans-serif;
+    font-weight: 300;
+    margin:0;
+    padding:0;
+    color: #000;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
     -moz-font-feature-settings: "kern" 1;
@@ -35,102 +35,95 @@ ul{
 
 
 
-.container {
-    margin: 0 auto;
-width: 90%;
-max-width:66em;
-display: grid;
-margin: 0 auto;
-grid-column-gap: 2rem;
-grid-template-columns: 1fr;
+// .container {
+//   margin: 0 auto;
+//   max-width:1120px;
+//   display: grid;
+//   padding: 0 2em;
+//   margin: 0 auto;
+//   grid-column-gap: 2rem;
+//   grid-template-columns: 1fr;
 
-&.page {
+//   &.page {
 
-grid-row-gap: 2em;
-  h2 {
-      max-width: 700px;
-    grid-column: 1/-1;
-    font-size: 1.6em;
-    font-weight: 300;
-    @media screen and (max-width: 900px) {
-max-width:100%;
-   
-}
-}
-}
-
-&.two {
-
-h2 {
-font-family: 'Source Code Pro', monospace;
-  font-weight:300;
-}
-
-.content-post {
-  display:grid;
-  grid-template-columns:  1fr;
-
-    padding: 1em 0;
-  &:hover .post-image{
-  opacity:1;
+//   grid-row-gap: 2em;
+//     h2 {
+//         max-width: 700px;
+//       grid-column: 1/-1;
+//       font-size: 1.6em;
+//       font-weight: 300;
+//       @media screen and (max-width: 900px) {
+//   max-width:100%;
     
-  }
+//   }
+//   }
+//   }
 
-  .content-post:hover .post-image {
-  transform:translateY(-100%);
-}
-    .post-image {
-  position: absolute;
-  right: 80px;
-  bottom:100px;
-  max-width:250px;
-  opacity:0;
-  margin-top:-20px;
- transition: transform 250ms;
-  vertical-align: bottom;
-  transition: 0.2s;
-    transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    -ms-transition: all 0.2s ease-in-out;
-  }
+//   &.two {
 
+//   h2 {
+//   font-family: 'Source Code Pro', monospace;
+//     font-weight:300;
+//   }
 
-}
+//   .content-post {
+//     display:grid;
+//     grid-template-columns:  1fr;
 
+//       padding: 1em 0;
+//     &:hover .post-image{
+//     opacity:1;
+      
+//     }
 
-
-
-h2 {
-      max-width: 700px;
-    grid-column: 1/-1;
-    font-size: 1.6em;
-    font-weight: 300;
-    @media screen and (max-width: 900px) {
-max-width:100%;
-   
-}
-
-}
-
-
-  
-}
-}
+//     .content-post:hover .post-image {
+//     transform:translateY(-100%);
+//   }
+//       .post-image {
+//     position: absolute;
+//     right: 80px;
+//     bottom:100px;
+//     max-width:250px;
+//     opacity:0;
+//     margin-top:-20px;
+//   transition: transform 250ms;
+//     vertical-align: bottom;
+//     transition: 0.2s;
+//       transition: all 0.2s ease-in-out;
+//       -webkit-transition: all 0.2s ease-in-out;
+//       -moz-transition: all 0.2s ease-in-out;
+//       -o-transition: all 0.2s ease-in-out;
+//       -ms-transition: all 0.2s ease-in-out;
+//     }
 
 
+//   }
+
+
+
+
+//   h2 {
+//         max-width: 700px;
+//       grid-column: 1/-1;
+//       font-size: 1.6em;
+//       font-weight: 300;
+//       @media screen and (max-width: 900px) {
+//   max-width:100%;
+    
+//   }
+
+//   }
+
+
+    
+//   }
+// }
 
 
 
 img {
   max-width:100%;
 }
-
-
-
-
-
 
 .content .taglist {
    list-style: none;
@@ -205,36 +198,36 @@ max-width:100%;
   }
 }
 
-.blog-content {
-      background: #fff;
-    border-radius: 4px;
-    border: 1px solid rgb(234, 236, 238);
-    box-shadow: 0 2px 8px rgba(25, 17, 34, 0.05);
-    padding-left: 3.15rem;
-    padding-right: 3.15rem;
+// .blog-content {
+//       background: #fff;
+//     border-radius: 4px;
+//     border: 1px solid rgb(234, 236, 238);
+//     box-shadow: 0 2px 8px rgba(25, 17, 34, 0.05);
+//     padding-left: 3.15rem;
+//     padding-right: 3.15rem;
     
-    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    -moz-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//     transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//     -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//     -moz-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .button.is-small {
-    margin-bottom:2em;
-    display:block;
-    }
+//     .button.is-small {
+//     margin-bottom:2em;
+//     display:block;
+//     }
 
-     @media screen and (max-width: 700px) {
- padding: 0 5px;
-    border: none;
-    box-shadow: none;
+//      @media screen and (max-width: 700px) {
+//  padding: 0 5px;
+//     border: none;
+//     box-shadow: none;
 
-}
+// }
 
 
 
-    &:hover {
-transform:translateY(-4px);box-shadow:0 10px 42px rgba(25, 17, 34, 0.1);-webkit-transform:translateY(-4px);
-    }
-}
+//     &:hover {
+// transform:translateY(-4px);box-shadow:0 10px 42px rgba(25, 17, 34, 0.1);-webkit-transform:translateY(-4px);
+//     }
+// }
 
 .index-content {
   display:grid;
@@ -345,5 +338,6 @@ grid-template-columns: 1fr ;
 
   }
 }
+
 
 
